// Copyright (c) Ultraviolet
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

import "google/protobuf/empty.proto";

package manager;

option go_package = "./manager";

service ManagerService {
  rpc CreateVm(google.protobuf.Empty) returns (CreateRes) {}
  rpc RemoveVm(RemoveReq) returns (google.protobuf.Empty) {}
  rpc SVMInfo(SVMInfoReq) returns (SVMInfoRes) {}
  rpc AttestationPolicy(AttestationPolicyReq) returns (AttestationPolicyRes) {}
}

message CreateRes{
  string forwarded_port = 1;
  string svm_id = 2;
}

message RemoveReq{
  string svm_id = 1;
}

message AttestationPolicyRes{
  bytes info = 1;
  string id = 2;
}

message SVMInfoRes{
  string id = 1;
  string ovmf_version = 2;
  int32 cpu_num = 3;
  string cpu_type = 4;
  string kernel_cmd = 5;
  string eos_version = 6;
}

message AttestationPolicyReq {
  string id = 1;
}

message SVMInfoReq {
  string id = 1;
}

